--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2007,6 +2007,87 @@ th {
     font-size: 14px;
     color: #010101; }
 
+.btn-burger {
+  width: 30px;
+  height: 22px;
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  cursor: pointer; }
+  .btn-burger span {
+    display: block;
+    width: 100%;
+    height: 2px;
+    border-radius: 2px;
+    background: #fff; }
+
+.mobile-menu {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  max-width: 280px;
+  height: 100%;
+  overflow-y: auto;
+  padding: 30px;
+  background: #030c1b;
+  color: #fff;
+  z-index: 3;
+  display: none; }
+  .mobile-menu .menu {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    margin: 20px 0; }
+    .mobile-menu .menu li {
+      margin: 0 0 10px; }
+  .mobile-menu .btn-entrance {
+    margin: 0 10px 0 0; }
+  .mobile-menu .links-registration {
+    padding: 0 0 0 10px; }
+  .mobile-menu .row {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin: 0 0 20px; }
+  .mobile-menu .box-contacts {
+    margin: 0 0 20px; }
+  .mobile-menu .phone {
+    font-size: 16px; }
+
+.btn-close {
+  position: relative;
+  width: 20px;
+  height: 20px;
+  margin: 0 0 0 auto;
+  cursor: pointer; }
+  .btn-close:before, .btn-close:after {
+    content: '';
+    position: absolute;
+    left: 10px;
+    top: 0;
+    width: 1px;
+    height: 100%;
+    background: #fff; }
+  .btn-close:before {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg); }
+  .btn-close:after {
+    -webkit-transform: rotate(135deg);
+            transform: rotate(135deg); }
+
 /*==========  Desktop First  ==========*/
 /* Large Devices, Wide Screens */
 @media only screen and (max-width: 1200px) {
@@ -2014,37 +2095,59 @@ th {
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width: 992px) {
-  /**/ }
+  .menu li {
+    margin: 0 20px 0 0; }
+  h1 {
+    font-size: 36px; }
+  .main-video {
+    width: 400px;
+    height: 280px; }
+  .main-content {
+    padding: 0 20px 0 0;
+    width: calc(100% - 400px); } }
 
 /* Small Devices, Tablets */
+@media only screen and (max-width: 810px) {
+  .header-top {
+    display: none; }
+  .btn-burger {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  header {
+    background: rgba(3, 12, 27, 0.92); } }
+
 @media only screen and (max-width: 768px) {
-  /**/ }
+  .header-bottom {
+    padding: 14px 0; }
+    .header-bottom .container {
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center; }
+    .header-bottom .box-contacts {
+      display: none; }
+  main {
+    padding: 109px 0 80px; }
+    main .box-text {
+      margin: 29px auto 33px; }
+  .main-content {
+    padding: 0;
+    width: 100%;
+    text-align: center;
+    margin: 0 auto 35px; }
+    .main-content .btn {
+      margin: 0 auto; }
+  .main-video {
+    width: 374.3px;
+    height: 235.3px;
+    margin: 0 auto; } }
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 480px) {
-  /**/ }
+  header .logo {
+    max-width: 107px; } }
 
 /* Custom, iPhone Retina */
-@media only screen and (max-width: 320px) {
-  /**/ }
-
-/*==========  Mobile First  ==========*/
-/* Custom, iPhone Retina */
-@media only screen and (min-width: 320px) {
-  /**/ }
-
-/* Extra Small Devices, Phones */
-@media only screen and (min-width: 480px) {
-  /**/ }
-
-/* Small Devices, Tablets */
-@media only screen and (min-width: 768px) {
-  /**/ }
-
-/* Medium Devices, Desktops */
-@media only screen and (min-width: 992px) {
-  /**/ }
-
-/* Large Devices, Wide Screens */
-@media only screen and (min-width: 1200px) {
-  /**/ }
+@media only screen and (max-width: 360px) {
+  h1 {
+    font-size: 30px; } }
