--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -3,53 +3,74 @@
 /*==========  Desktop First  ==========*/
 
 /* Large Devices, Wide Screens */
-@media only screen and (max-width : 1200px)
-	/**/
+@media only screen and (max-width: 1200px)
+  /**/
 
 
 /* Medium Devices, Desktops */
-@media only screen and (max-width : 992px)
-	/**/
+@media only screen and (max-width: 992px)
+  .menu li
+    margin: 0 20px 0 0
 
+  h1
+    font-size: 36px
+
+  .main-video
+    width: 400px
+    height: 280px
+
+  .main-content
+    padding: 0 20px 0 0
+    width: calc(100% - 400px)
 
 /* Small Devices, Tablets */
-@media only screen and (max-width : 768px)
-	/**/
+@media only screen and (max-width: 810px)
+  .header-top
+    display: none
 
+  .btn-burger
+    display: flex
+
+  header
+    background: rgba(#030c1b, .92)
+
+@media only screen and (max-width: 768px)
+  .header-bottom
+    padding: 14px 0
+
+    .container
+      align-items: center
+
+    .box-contacts
+      display: none
+
+  main
+    padding: 109px 0 80px
+    .box-text
+      margin: 29px auto 33px
+
+  .main-content
+    padding: 0
+    width: 100%
+    text-align: center
+    margin: 0 auto 35px
+    .btn
+      margin: 0 auto
+
+  .main-video
+    width: 374.3px
+    height: 235.3px
+    margin: 0 auto
 
 /* Extra Small Devices, Phones */
-@media only screen and (max-width : 480px)
-	/**/
+@media only screen and (max-width: 480px)
+  header
+    .logo
+      max-width: 107px
 
 
 /* Custom, iPhone Retina */
-@media only screen and (max-width : 320px)
-	/**/
-
-
-/*==========  Mobile First  ==========*/
-
-/* Custom, iPhone Retina */
-@media only screen and (min-width : 320px)
-	/**/
-
-
-/* Extra Small Devices, Phones */
-@media only screen and (min-width : 480px)
-	/**/
-
-
-/* Small Devices, Tablets */
-@media only screen and (min-width : 768px)
-	/**/
-
-
-/* Medium Devices, Desktops */
-@media only screen and (min-width : 992px)
-	/**/
-
-
-/* Large Devices, Wide Screens */
-@media only screen and (min-width : 1200px)
-	/**/
+@media only screen and (max-width: 360px)
+  h1
+    font-size: 30px
 
