--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -740,6 +740,7 @@ main
 
 .to-start-box__icon
   width: 100px
+  min-width: 100px
   height: 100px
   background: $blue
   display: flex
@@ -748,6 +749,9 @@ main
   transition: .3s ease
   border-radius: 20px
   box-shadow: 0 0 7.4px 0.6px rgba(136, 136, 136, 0.15)
+
+.slick-dotted.slick-slider
+  margin-bottom: 0
 
 //.question
 .question
