--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -328,6 +328,42 @@
   .reviews .box-text
     margin: 28px auto 29px
 
+  .cabinet-content
+    width: 100%
+    &:before
+      display: none
+
+  .cabinet-content__wrap
+    padding: 0
+
+  .sidebar
+    display: none
+    height: 100%
+    overflow-y: auto
+    padding: 20px
+    position: fixed
+    background: $blue
+    z-index: 3
+    max-width: 300px
+    width: 100%
+    top: 0
+    left: 0
+    
+  .cabinet
+    padding: 10px 0 67px
+    background: #fff
+    .container
+      padding: 0 10px
+
+  .cabinet-header
+    margin: 0 0 40px
+
+  .row-tariffs
+    justify-content: space-around
+
+  .btn-menu-cabinet
+    display: flex
+
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 575px)
   .about-box
@@ -355,6 +391,28 @@
 
   .countdown-dots
     font-size: 75px
+
+  .box-subscribe-item__body
+    flex-wrap: wrap
+
+  .date-active
+    margin: 0 0 10px
+    width: 100%
+
+  .box-subscribe
+    margin: 0 0 30px
+    h3
+      margin: 0 0 26px
+
+  .box-subscribe-item__head
+    margin: 0 0 20px
+
+  .title-description
+    margin: 0 0 35px
+
+  .box-subscribe-item
+    padding: 25px 9px 19px 11px
+
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width: 380px)
