--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1370,6 +1370,12 @@ footer
   color: #fff
   padding: 10px 13px 300px 0
 
+.sidebar-header
+  width: 100%
+  display: flex
+  align-items: center
+  justify-content: space-between
+
 
 .time-box
   text-align: center
@@ -2004,15 +2010,13 @@ th
     fill: #fff
 
 .btn-close-sidebar
-  width: 20px
-  height: 20px
-  position: absolute
-  right: 10px
-  top: 10px
+  width: 16px
+  height: 16px
+  position: relative
   &:before, &:after
     content: ''
     position: absolute
-    left: 10px
+    left: 8px
     top: 0
     width: 1px
     height: 100%
