--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -161,6 +161,29 @@
   .footer-info
     max-width: none
 
+  .cabinet-content__wrap
+    padding-left: 30px
+
+  .box-analytics
+    margin: 31px 0 0
+
+  .table-wrapper
+    overflow-x: auto
+    padding: 15px 10px 22px 15px
+    &::-webkit-scrollbar-thumb:horizontal
+      background: #195ddc
+      border-radius: 3px
+
+    &::-webkit-scrollbar
+      height: 7px
+
+    &::-webkit-scrollbar-track
+      background: #f0f4f6
+      border-radius: 2px
+
+  .table-scroll
+    min-width: 800px
+
 @media only screen and (max-width: 810px)
   .header-top
     display: none
@@ -340,7 +363,7 @@
     display: none
     height: 100%
     overflow-y: auto
-    padding: 20px
+    padding: 20px 12px
     position: fixed
     background: $blue
     z-index: 3
@@ -348,7 +371,17 @@
     width: 100%
     top: 0
     left: 0
-    
+
+  .time-box
+    margin: 19px auto 25px
+
+  .box-text-data
+    margin: 25px 0 24px
+    text-align: left
+
+  .menu-sidebar li
+    margin: 0 0 27px
+
   .cabinet
     padding: 10px 0 67px
     background: #fff
@@ -363,6 +396,15 @@
 
   .btn-menu-cabinet
     display: flex
+
+  .list-currency li a
+    width: 65px
+    height: 65px
+    font-size: 12px
+    border-radius: 10px
+
+  .box-analytics h3
+    font-size: 18px
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 575px)
